test/error/E44.chigfn
{
	"type": "function",
	"name": "helloworld",
  "inputs": []
}
